# pallet-contracts-waterfall

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  bors.toml  build.sh  docker-compose.yml  flipper-pruned.wasm  index.js  index.spec.js  package.json  test.sh  tsconfig.json  update.sh  utils.sh
.github/workflows/: main.yml
contracts-assemblyscript/: optimized.wasm
contracts-assemblyscript/incrementer/: README.md  build.sh  package.json
contracts-assemblyscript/incrementer/assembly/: env.ts  index.ts  lib.ts
contracts-ink/: README.md
contracts-ink/restore-contract/: build.sh
contracts/as-substrate/: README.md  build.sh  package.json
contracts/as-substrate/assembly/: index.ts
contracts/assemblyscript/: README.md  tsconfig.json
contracts/assemblyscript/erc20/: README.md  build.sh  package.json
contracts/assemblyscript/flipper/: README.md  build.sh  package.json
contracts/assemblyscript/incrementer/: README.md  build.sh  package.json  tsconfig.json
contracts/assemblyscript/raw-flipper/: package.json
contracts/raw-incrementer/: build.sh
contracts/raw-incrementer/.cargo/: config
contracts/raw-incrementer/src/: ext.rs  lib.rs
contracts/restore-contract/src/: ext.rs  lib.rs
contracts/rust/restore-contract/: Cargo.toml  build.sh
contracts/rust/restore-contract/src/: ext.rs
contracts/solidity/: README.md
contracts/solidity/creator/: build.sh  (+1 more)
tests/: consts.ts  contracts-as-substrate.spec..ts  contracts-assemblyscript.spec.ts  contracts-rust.spec.ts  contracts-solidity.spec.ts  index.spec.js  index.spec.ts  utils.ts
(+19 files in other folders)
